--- a/style.css
+++ b/style.css
@@ -10,33 +10,115 @@ body{
     font-family: 'Dosis', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
-nav {
+nav{
+    width: 100%;
+    min-height: 15vh;
+    padding: 0px 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center; 
+}
+nav ul{
+    display: flex;
+    justify-content: center;
     align-items: center;
-    height: 17vh;
+    margin-top: 10px;
+
+}
+nav ul li{
+    list-style: none;
+    padding: 20px 15px;
+
+}
+nav ul li a{
+    text-decoration: none;
+    color: #000000;
+    font-size: 1.5rem;
+}
+nav ul li a:hover{
+    color: rgb(240, 59, 89);
+    transition: 0.5s ease;
+}
+nav .logo{
+    margin-top: 10px;
+
+}
+nav .logo a{
+    font-size: 32px;
+    color: rgb(249, 133, 152);
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+}
+nav .toggle{
+    font-size: 25px;
+    cursor: pointer;
+    color: rgb(249, 133, 152);
+    display: none;
+}
+.content{
+    width: 100%;
+    min-height: 85vh;
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    padding: 0px 80px;
 }
 
-.nav-links {
-  display: flex;
-  gap: 3rem;
-  list-style:disc;
-  font-size: 1.5rem;
-}
 
-a {
-  color: rgb(255, 120, 120);
-  text-decoration: none;
-}
-a:hover{
-    color: black;
-    transition-duration: 1s;
-}
+@media screen and (max-width:800px){
+    .wrapper{
+        width: 100%;
+    }
+    nav{
+        padding: 20px 40px;   
+    }
+    nav .logo a{
+        font-size: 25px;
+    }
+    nav ul{
+        display: none;
+        justify-content: center;
+      flex-direction: column;
+    
+    }
+    nav ul li{
+       padding: 12px 0px;
+    }
+    nav ul li a{
+        font-size: 19px;
+    }
+    nav .toggle{
+        display: flex;
+        z-index: 1;
+    }
+    
+        nav ul.active{
+            top:0;
+            left: 0;
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content:center;
+            align-items:center;
+            flex-direction:column;
+            background-color: lavenderblush;
 
-.logo {
-    font-size: 2rem;
-    color: rgb(0, 0, 0);
-    font-weight: 700;
-    letter-spacing: 0.5rem;
-  }
-  
+        }
+}
+@media screen and (max-width:500px){
+    nav .logo a{
+        font-size: 25px;
+    }
+    .article h1{
+        font-size: 32px;
+        }
+        .article p{
+        font-size: 14px;
+        }
+        .article .button a{
+            padding: 10px 14px;
+        font-size: 14px;
+        }
+}
